--- a/docs/01_基础/00_基础语法.md
+++ b/docs/01_基础/00_基础语法.md
@@ -45,4 +45,14 @@ https://www.oracle.com
 + 文档注释
 
 #### 2.关键字
+public private static 等
+#### 3.常量
+`字符串` 
+`整数`
+`小数`
+`字符`
+`布尔`
+`空`
+
+note: 字符串用双引号，字符用单引号
 
