--- a/docs/01_基础/00_基础语法.md
+++ b/docs/01_基础/00_基础语法.md
@@ -56,3 +56,22 @@ public private static 等
 
 note: 字符串用双引号，字符用单引号
 
+#### 4. 数据类型
+计算机最小的信息单元叫"比特位"， `b`
+
+计算机最小的存储单元叫"字节"， `B`
+
+1B = 8bit 
+
+1K = 1024B 
+
++ 整型： `byte`, `short`， `int`， `long`
++ 浮点型： `float`, `double`
++ 字符： `char`
++ 布尔： `boolean`
+
+
+    
+
+
+
